--- a/RandStuff.ru - Генератор случайных чисел онлайн_files/font-awesome.css
+++ b/RandStuff.ru - Генератор случайных чисел онлайн_files/font-awesome.css
@@ -9,12 +9,9 @@
   src: url('https://randstuff.ru/public/fonts/fontawesome-webfont.eot?v=4.4.0');
   src: url('https://randstuff.ru/public/fonts/fontawesome-webfont.eot?#iefix&v=4.4.0')
       format('embedded-opentype'),
-    url('https://randstuff.ru/public/fonts/fontawesome-webfont.woff2?v=4.4.0')
-      format('woff2'),
-    url('https://randstuff.ru/public/fonts/fontawesome-webfont.woff?v=4.4.0')
-      format('woff'),
-    url('https://randstuff.ru/public/fonts/fontawesome-webfont.ttf?v=4.4.0')
-      format('truetype'),
+    url('./fontawesome-webfont.woff2?v=4.4.0') format('woff2'),
+    url('./fontawesome-webfont.woff?v=4.4.0') format('woff'),
+    url('./fontawesome-webfont.ttf?v=4.4.0') format('truetype'),
     url('https://randstuff.ru/public/fonts/fontawesome-webfont.svg?v=4.4.0#fontawesomeregular')
       format('svg');
   font-weight: normal;
